--- a/aboutme.html
+++ b/aboutme.html
@@ -1507,7 +1507,7 @@ div.tocify {
 </div>
 
 
-<p>My name is Uma and I make websites!!</p>
+<p>My name is Uma and I make websites that are cool!</p>
 
 
 
