Adding linkedin and github url

--- a/index.html
+++ b/index.html
@@ -1511,6 +1511,12 @@ div.tocify {
 <h1>Uma’s Professional Experience</h1>
 <p>You can learn a lot more about me <a href="aboutme.html">here</a></p>
 </div>
+<div id="feel-free-to-connect-with-me-on-linkedin" class="section level1">
+<h1>Feel free to connect with me on <a href="https://www.linkedin.com/in/uma-palaniappan/">linkedin</a></h1>
+</div>
+<div id="check-out-some-other-projects-that-ive-been-working-on-my-github" class="section level1">
+<h1>Check out some other projects that I’ve been working on my <a href="https://github.com/unp2000/">github</a></h1>
+</div>
 
 
 
