--- a/index.html
+++ b/index.html
@@ -1511,11 +1511,17 @@ div.tocify {
 <h1>Uma’s Professional Experience</h1>
 <p>You can learn a lot more about me <a href="aboutme.html">here</a></p>
 </div>
-<div id="feel-free-to-connect-with-me-on-linkedin" class="section level1">
-<h1>Feel free to connect with me on <a href="https://www.linkedin.com/in/uma-palaniappan/">linkedin</a></h1>
+<div id="linkedin" class="section level1">
+<h1>LinkedIn</h1>
+<p>Feel free to connect with me on <a href="https://www.linkedin.com/in/uma-palaniappan/">linkedin</a></p>
 </div>
-<div id="check-out-some-other-projects-that-ive-been-working-on-my-github" class="section level1">
-<h1>Check out some other projects that I’ve been working on my <a href="https://github.com/unp2000/">github</a></h1>
+<div id="github" class="section level1">
+<h1>Github</h1>
+<p>Check out some other projects that I’ve been working on my <a href="https://github.com/unp2000/">github</a></p>
+</div>
+<div id="email" class="section level1">
+<h1>Email</h1>
+<p>Send me a note</p>
 </div>
 
 
