--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@ div.tocify {
 </div>
 <div id="email" class="section level1">
 <h1>Email</h1>
-<p>Send me a note</p>
+<p>Send me a note at my <a href="unp2000@cumc.columbia.edu">email</a></p>
 </div>
 
 
