adding site.yaml

--- a/aboutme.html
+++ b/aboutme.html
@@ -1508,7 +1508,7 @@ div.tocify {
 
 
 <p>My name is Uma and I make websites that are cool!</p>
-<p>I am from sunny California!</p>
+<p>I was born and raised in sunny Fremont, CA and now live in Manhattan, NY where I’m studying Public Health at the Mailman School of Public Health at Columbia University.</p>
 
 
 
