--- a/index.html
+++ b/index.html
@@ -1507,8 +1507,8 @@ div.tocify {
 </div>
 
 
-<div id="my-professional-experience" class="section level1">
-<h1>My Professional Experience</h1>
+<div id="uma-professional-experience" class="section level1">
+<h1>Uma Professional Experience</h1>
 <p>You can learn a lot more about me <a href="aboutme.html">here</a></p>
 </div>
 <div id="linkedin" class="section level1">
