--- a/aboutme.html
+++ b/aboutme.html
@@ -1507,7 +1507,7 @@ div.tocify {
 </div>
 
 
-<p>My name is Uma and I make websites that are cool!</p>
+<p>My name is Uma and I make websites that are cool.</p>
 <p>I was born and raised in sunny Fremont, CA and now live in Manhattan, NY where I’m studying Public Health at the Mailman School of Public Health at Columbia University.</p>
 
 
