--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@ div.tocify {
 
 
 <div id="umas-professional-experience" class="section level1">
-<h1>Uma’s Professional Experience:</h1>
+<h1>Uma’s Professional Experience!</h1>
 <p>You can learn a lot more about me <a href="aboutme.html">here</a></p>
 </div>
 <div id="linkedin" class="section level1">
