--- a/index.html
+++ b/index.html
@@ -384,6 +384,8 @@ div.tocify {
 <div id="umas-professional-experience" class="section level1">
 <h1>Uma’s Professional Experience!</h1>
 <p>You can learn a lot more about me <a href="aboutme.html">here</a></p>
+<p>My name is Uma and I make websites that are cool.</p>
+<p>I was born and raised in sunny Fremont, CA and now live in Manhattan, NY where I’m studying Public Health at the Mailman School of Public Health at Columbia University.</p>
 </div>
 
 
