Adding Ziter Health Insights to about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -385,13 +385,14 @@ div.tocify {
 <h1>Education:</h1>
 <p><strong>Columbia University Mailman School of Public Health</strong></p>
 <p>MPH in Epidemiology</p>
+<p>Certificate in Applied Biostatistics</p>
 <p>New York, NY</p>
 <p>Candidate for Graduation: May 2020</p>
 <p>September 2018- Present</p>
 <p><strong>Santa Clara University</strong></p>
 <p>Bachelor of Science in Public Health Science and Psychology</p>
-<p>Santa Clara, CA</p>
 <p>Minors: Biology and Psychobiology</p>
+<p>Santa Clara, CA</p>
 <p>September 2013 - May 2017</p>
 </div>
 <div id="experience" class="section level1">
@@ -401,6 +402,14 @@ div.tocify {
 <p>Raritan, NJ, June 2019 – August 2019</p>
 <p>● Lead longitudinal qualitative analysis for the Patient Reported Outcomes team for FDA approved drugs with PRO label language and provided recommendations to inform company strategy</p>
 <p>● Adapted global market access tools for Neuroscience breakthrough therapy for Major Depressive Disorder, Spravato, and incorporated internal stakeholder feedback from Global, Regional, and Local markets</p>
+<p><strong>Zitter Health Insights</strong></p>
+<p><em>Research Analyst, Policy &amp; Access Tracking Tool</em> (07/17- 04/18)</p>
+<p><em>Research Analyst, Product Strategies Group</em> (04/18- 07/18)</p>
+<p>San Francisco, CA, July 2017- July 2018</p>
+<p>● Mastered 8+ therapeutic areas, maintaining an error rate of less than 1% and trained secondary team in Mumbai, India</p>
+<p>● Tracked new-to-market drugs leading to widespread client distribution and account team success</p>
+<p>● Researched prior authorization coverage criteria for different therapeutic areas for 500+ insurance payers</p>
+<p>● Responsible for all client deliverables in the specialty drug landscape (oncology and non-oncology)</p>
 </div>
 
 
