Adding more experiences

--- a/aboutme.html
+++ b/aboutme.html
@@ -381,27 +381,30 @@ div.tocify {
 </div>
 
 
+<p><span class="math inline">\(~\)</span></p>
 <div id="education" class="section level1">
 <h1>Education:</h1>
+<p><span class="math inline">\(~\)</span></p>
 <p><strong>Columbia University Mailman School of Public Health</strong></p>
-<p>MPH in Epidemiology</p>
-<p>Certificate in Applied Biostatistics</p>
-<p>New York, NY</p>
+<p>MPH in Epidemiology, Certificate in Applied Biostatistics</p>
+<p>New York, NY, September 2018- Present</p>
 <p>Candidate for Graduation: May 2020</p>
-<p>September 2018- Present</p>
+<p><span class="math inline">\(~\)</span></p>
 <p><strong>Santa Clara University</strong></p>
 <p>Bachelor of Science in Public Health Science and Psychology</p>
 <p>Minors: Biology and Psychobiology</p>
-<p>Santa Clara, CA</p>
-<p>September 2013 - May 2017</p>
+<p>Santa Clara, CA, September 2013 - May 2017</p>
+<p><span class="math inline">\(~\)</span></p>
 </div>
 <div id="experience" class="section level1">
 <h1>Experience:</h1>
+<p><span class="math inline">\(~\)</span></p>
 <p><strong>The Janssen Pharmaceutical Companies of Johnson &amp; Johnson</strong></p>
 <p><em>Global Market Access Intern</em></p>
 <p>Raritan, NJ, June 2019 – August 2019</p>
 <p>● Lead longitudinal qualitative analysis for the Patient Reported Outcomes team for FDA approved drugs with PRO label language and provided recommendations to inform company strategy</p>
 <p>● Adapted global market access tools for Neuroscience breakthrough therapy for Major Depressive Disorder, Spravato, and incorporated internal stakeholder feedback from Global, Regional, and Local markets</p>
+<p><span class="math inline">\(~\)</span></p>
 <p><strong>Zitter Health Insights</strong></p>
 <p><em>Research Analyst, Policy &amp; Access Tracking Tool</em> (07/17- 04/18)</p>
 <p><em>Research Analyst, Product Strategies Group</em> (04/18- 07/18)</p>
@@ -410,6 +413,27 @@ div.tocify {
 <p>● Tracked new-to-market drugs leading to widespread client distribution and account team success</p>
 <p>● Researched prior authorization coverage criteria for different therapeutic areas for 500+ insurance payers</p>
 <p>● Responsible for all client deliverables in the specialty drug landscape (oncology and non-oncology)</p>
+<p><span class="math inline">\(~\)</span></p>
+<p><strong>Santa Clara County, Department of Health</strong></p>
+<p><em>Student Consultant</em></p>
+<p>Santa Clara, CA, April 2017 - June 2017</p>
+<p>● Collaborated with a team of three students to work on our Public Health Senior Capstone Project with SCC DOH to democratize and increase access to the Diabetes Prevention Program (DPP) to its community members</p>
+<p>● Created deliverables for DOH and stakeholders with ROI calculations for implementing the DPP in the county</p>
+<p>● Participated in work groups with the DOH and collaborated with local organizations to promote and create education based campaigns to increase awareness to DPP</p>
+<p><span class="math inline">\(~\)</span></p>
+<p><strong>Neurotrack</strong></p>
+<p><em>Research Operations Intern</em></p>
+<p>Redwood City, CA, June 2016 - April 2017</p>
+<p>● Involved in market research evaluating competitor cognitive health programs while standardizing testing protocols</p>
+<p>● Performed UI/UX research on Neurotrack’s initial cognitive health program by assessing and deconstructing cognitive psychology principles used</p>
+<p>● Developed user content for Neurotrack’s website and summarized findings from company’s pilot studies</p>
+<p><span class="math inline">\(~\)</span></p>
+<p><strong>UCSF Dubal Lab</strong></p>
+<p><em>Undergraduate Researcher- Dr. Dena Dubal</em></p>
+<p>San Francisco, CA, May 2016- January 2017</p>
+<p>● Compiled a meta-analysis of data obtained from literature about Sex Differences and Mortality in Parkinson’s, Alzheimer’s, Lewy Body Dementia, Fronto-temporal Dementia, and ALS</p>
+<p>● Skills gained: Cell culture, Western Blot, PCR, qPCR, Mouse Model maintenance, STATA, Graphing and Data Analysis</p>
+<p><span class="math inline">\(~\)</span></p>
 </div>
 
 
