--- a/aboutme.html
+++ b/aboutme.html
@@ -434,6 +434,18 @@ div.tocify {
 <p>● Compiled a meta-analysis of data obtained from literature about Sex Differences and Mortality in Parkinson’s, Alzheimer’s, Lewy Body Dementia, Fronto-temporal Dementia, and ALS</p>
 <p>● Skills gained: Cell culture, Western Blot, PCR, qPCR, Mouse Model maintenance, STATA, Graphing and Data Analysis</p>
 <p><span class="math inline">\(~\)</span></p>
+<p><strong>Omada Health</strong></p>
+<p><em>Support Extension</em></p>
+<p>San Francisco, CA, August 2015 - December 2016</p>
+<p>● Collaborated with Omada Health’s Support Team to streamline application processes for their flagship behavioral modification program, resulting in same-day turnover for application analysis using criteria set by the CDC</p>
+<p>● Participated in outreach calling campaigns targeting certain demographics ranging from 18-65+</p>
+<p><span class="math inline">\(~\)</span></p>
+<p><strong>Santa Clara University Engineering World Health- School of Engineering and Frugal Innovation Lab</strong></p>
+<p><em>Public Health Consultant</em></p>
+<p>Santa Clara, CA, January 2014- January 2017</p>
+<p>● Collaborated with Public Health students to perform public health, market, and impact research in developing countries for affordable, portable devices: an EKG and Vitals Sensor created by engineering students for their Senior Design Project</p>
+<p>● Synthesized constructive feedback on devices from medical and public health professionals to provide to engineering team</p>
+<p>● Presented Key Findings to University in order to secure funding for students to travel to these developing countries</p>
 </div>
 
 
