--- a/aboutme.html
+++ b/aboutme.html
@@ -446,6 +446,16 @@ div.tocify {
 <p>● Collaborated with Public Health students to perform public health, market, and impact research in developing countries for affordable, portable devices: an EKG and Vitals Sensor created by engineering students for their Senior Design Project</p>
 <p>● Synthesized constructive feedback on devices from medical and public health professionals to provide to engineering team</p>
 <p>● Presented Key Findings to University in order to secure funding for students to travel to these developing countries</p>
+<p><span class="math inline">\(~\)</span></p>
+</div>
+<div id="leadership" class="section level1">
+<h1>Leadership:</h1>
+<p><strong>Santa Clara University Office of Undergraduate Admissions</strong></p>
+<p><em>Student Ambassador &amp; Leader</em></p>
+<p>Santa Clara, CA, October 2013 - June 2017</p>
+<p>● Communicated with prospective students and families through leading campus wide tours, student panels, and providing front desk assistance</p>
+<p>● Oversaw 50 student employees in a team through the Student Ambassador program specializing in scheduling and outreach visits for high schools and programs throughout the country</p>
+<p>● Maintained relationships with 75 organizations located over 500-mile radius to advocate higher education to underrepresented high school students to the university</p>
 </div>
 
 
