Adding Skills and Leadership

--- a/aboutme.html
+++ b/aboutme.html
@@ -347,7 +347,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="aboutme.html">About</a>
 </li>
 <li>
   <a href="mailto:&lt;unp2000@cumc.columbia.edu&gt;">
@@ -383,8 +383,7 @@ div.tocify {
 
 <p><span class="math inline">\(~\)</span></p>
 <div id="education" class="section level1">
-<h1>Education:</h1>
-<p><span class="math inline">\(~\)</span></p>
+<h1>Education</h1>
 <p><strong>Columbia University Mailman School of Public Health</strong></p>
 <p>MPH in Epidemiology, Certificate in Applied Biostatistics</p>
 <p>New York, NY, September 2018- Present</p>
@@ -397,8 +396,7 @@ div.tocify {
 <p><span class="math inline">\(~\)</span></p>
 </div>
 <div id="experience" class="section level1">
-<h1>Experience:</h1>
-<p><span class="math inline">\(~\)</span></p>
+<h1>Experience</h1>
 <p><strong>The Janssen Pharmaceutical Companies of Johnson &amp; Johnson</strong></p>
 <p><em>Global Market Access Intern</em></p>
 <p>Raritan, NJ, June 2019 – August 2019</p>
@@ -449,13 +447,28 @@ div.tocify {
 <p><span class="math inline">\(~\)</span></p>
 </div>
 <div id="leadership" class="section level1">
-<h1>Leadership:</h1>
+<h1>Leadership</h1>
 <p><strong>Santa Clara University Office of Undergraduate Admissions</strong></p>
 <p><em>Student Ambassador &amp; Leader</em></p>
 <p>Santa Clara, CA, October 2013 - June 2017</p>
 <p>● Communicated with prospective students and families through leading campus wide tours, student panels, and providing front desk assistance</p>
 <p>● Oversaw 50 student employees in a team through the Student Ambassador program specializing in scheduling and outreach visits for high schools and programs throughout the country</p>
 <p>● Maintained relationships with 75 organizations located over 500-mile radius to advocate higher education to underrepresented high school students to the university</p>
+<p><span class="math inline">\(~\)</span></p>
+</div>
+<div id="skills" class="section level1">
+<h1>Skills</h1>
+<p>● Microsoft Suite (Access)</p>
+<p>● SAS</p>
+<p>● STATA</p>
+<p>● R</p>
+<p>● SQL</p>
+<p><span class="math inline">\(~\)</span></p>
+</div>
+<div id="languages" class="section level1">
+<h1>Languages</h1>
+<p>● English (native fluency)</p>
+<p>● Tamil (native fluency)</p>
 </div>
 
 
