--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="aboutme.html">About</a>
 </li>
 <li>
   <a href="mailto:&lt;unp2000@cumc.columbia.edu&gt;">
@@ -386,6 +386,7 @@ div.tocify {
 <p>You can learn a lot more about me <a href="aboutme.html">here</a></p>
 <p>My name is Uma and I make websites that are cool.</p>
 <p>I was born and raised in sunny Fremont, CA and now live in Manhattan, NY where I’m studying Public Health at the Mailman School of Public Health at Columbia University.</p>
+<p>This is me [] ()</p>
 </div>
 
 
