Adding plotly dashboard

--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@ div.tocify {
   <a href="aboutme.html">About</a>
 </li>
 <li>
+  <a href="dashboard.html">Plotly</a>
+</li>
+<li>
   <a href="mailto:&lt;unp2000@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
